# cdfi-val

./: LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
cdfi_val.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
cdfival/: __init__.py
cdfival/data/: schema.py
cdfival/models/: comps.py  dcf.py  pe.py  tbv.py
cdfival/portfolio/: tracker.py
examples/: broadway_financial_demo.ipynb
tests/: test_comps.py  test_dcf.py  test_pe.py  test_portfolio.py  test_tbv.py
