[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cdfi-val"
version = "0.1.0"
description = "Python valuation toolkit for CDFIs and Minority Depository Institutions"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "pandas>=1.4.0",
    "numpy>=1.21.0",
]

[project.urls]
Homepage = "https://github.com/Jaypatel1511/cdfi-val"
